--- a/src/Components/Layout.css
+++ b/src/Components/Layout.css
@@ -1,9 +1,4 @@
-a {
-  color: rgba(0, 0, 0, 0.87);
-  text-decoration: none;
-}
-
 .active {
-  color: rgba(0, 0, 0, 0.50);
+  color: #fff;
   text-decoration: underline;
 }
